<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Golden Retriever"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@mipmap/breed1"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="Height:"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="94dp" />

    <TextView
        android:id="@+id/male_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/height"
        android:text="@string/breed1_female_height"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="112dp" />

    <TextView
        android:id="@+id/female_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breed1_female_height"
        app:layout_constraintLeft_toLeftOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/male_height"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="123dp" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight:"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/female_height"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="146dp" />

    <TextView
        android:id="@+id/male_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breed1_male_weight"
        app:layout_constraintLeft_toLeftOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="163dp" />

    <TextView
        android:id="@+id/female_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breed1_female_weight"
        app:layout_constraintLeft_toLeftOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@id/male_weight"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="185dp" />

    <TextView
        android:id="@+id/life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:textStyle="bold"
        android:text="Life Expectancy:"
        app:layout_constraintLeft_toLeftOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/image"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="225dp" />

    <TextView
        android:id="@+id/dog_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:textSize="19dp"
        android:text="@string/breed1_life"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/life"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="240dp" />

    <TextView
        android:id="@+id/temperament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:textStyle="bold"
        android:text="Temperament:"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/dog_life"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="234dp" />

    <TextView
        android:id="@+id/dog_temperament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breed1_temperament"
        android:textColor="@color/teal_700"
        android:textSize="19dp"
        app:layout_constraintLeft_toLeftOf="@+id/temperament"
        app:layout_constraintTop_toBottomOf="@id/temperament"
        android:layout_marginTop="3dp"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="262dp" />

    <TextView
        android:id="@+id/fact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/breed1_fact"
        android:textSize="19dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/name"
        app:layout_constraintTop_toBottomOf="@+id/dog_temperament"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="270dp" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="Previous"
        android:layout_marginVertical="30dp"
        android:layout_marginLeft="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="592dp" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_marginVertical="30dp"
        android:layout_marginRight="70dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="592dp" />

</androidx.constraintlayout.widget.ConstraintLayout>